<resources>
    <string name="app_name">MyTrip</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="autonomy">Autonomy</string>
    <string name="calculate">CALCULATE</string>
    <string name="invalid_values">Please, inform valid values</string>
    <string name="total_distance">Total distance</string>
    <string name="price_per_liter">Price per liter</string>
    <string name="km_per_liter">KM per liter</string>
    <string name="total_spend">Your total spend will be:</string>
</resources>
